feat(main): jumbo

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/common.css">
     <title>Dropbox</title>
 </head>
 <body>
     <header>
-        <nav class="flex justify-between align-middle padding-1 gap">
+        <nav class="flex justify-between align-middle padding-1">
             <div>
                 <img src="./img/logo-small.png" alt="logo" class="align-middle">
                 <a href="#">Perché Dropbox</a>
@@ -28,31 +32,45 @@
 
     <main>
         <!-- JUMBO -->
-        <div></div>
+        <div class="container-azure">
+            <div class="boxed">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="flex red padding-1 margin-top-2">
+                    <div class="flex direction-column width30">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
+                        <button>Inizia la tua prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                        <a href="#"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
+                    </div>
+                    <div class="width70">
+                        <img src="./img/jumbo.png" alt="jumbo" class="jumbo">
+                    </div>
+                </div>
+            </div>
+        </div>
+            <!-- PLAN -->
+            <div></div>
 
-        <!-- PLAN -->
-        <div></div>
+            <!-- TEAM -->
+            <div></div>
 
-        <!-- TEAM -->
-        <div></div>
+            <!-- PARTNER -->
+            <div></div>
 
-        <!-- PARTNER -->
-        <div></div>
+            <!-- BUSINESS FEATURE -->
+            <div></div>
 
-        <!-- BUSINESS FEATURE -->
-        <div></div>
+            <!-- EXTRA INFO -->
+            <div></div>
 
-        <!-- EXTRA INFO -->
-        <div></div>
+            <!-- SQUARES -->
+            <div></div>
 
-        <!-- SQUARES -->
-        <div></div>
+            <!-- PROVA GRATUITA -->
+            <div></div>
 
-        <!-- PROVA GRATUITA -->
-        <div></div>
-
-        <!-- FAQ -->
-        <div></div>
+            <!-- FAQ -->
+            <div></div>
     </main>
 
     <footer></footer>
