feat(main): plans

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="flex justify-between align-middle padding-1">
+        <nav class="flex justify-between align-middle padding-1 orange">
             <div>
                 <img src="./img/logo-small.png" alt="logo" class="align-middle">
                 <a href="#">Perché Dropbox</a>
@@ -48,29 +48,34 @@
                 </div>
             </div>
         </div>
-            <!-- PLAN -->
-            <div></div>
 
-            <!-- TEAM -->
-            <div></div>
+        <!-- PLANS -->
+        <div class="boxed orange">
+            <h2>Trova il piano business che fa per te</h2>
+            <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
+            <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
+        </div>
 
-            <!-- PARTNER -->
-            <div></div>
+        <!-- TEAM -->
+        <div></div>
 
-            <!-- BUSINESS FEATURE -->
-            <div></div>
+        <!-- PARTNER -->
+        <div></div>
 
-            <!-- EXTRA INFO -->
-            <div></div>
+        <!-- BUSINESS FEATURE -->
+        <div></div>
 
-            <!-- SQUARES -->
-            <div></div>
+        <!-- EXTRA INFO -->
+        <div></div>
 
-            <!-- PROVA GRATUITA -->
-            <div></div>
+        <!-- SQUARES -->
+        <div></div>
 
-            <!-- FAQ -->
-            <div></div>
+        <!-- PROVA GRATUITA -->
+        <div></div>
+
+        <!-- FAQ -->
+        <div></div>
     </main>
 
     <footer></footer>
