feat(main): plans column

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <!-- JUMBO -->
-        <div class="container-azure">
+        <div class="container-jumbo">
             <div class="boxed">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex red padding-1 margin-top-2">
@@ -54,6 +54,74 @@
             <h2>Trova il piano business che fa per te</h2>
             <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
             <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
+        </div>
+
+        <div class="boxed red ">
+            <div class="flex container-plans">
+                <div class="flex direction-column-between width20">
+                    <div>
+                        <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
+                    </div>
+                    <div>
+                        <h3>Professional</h3>
+                        <strong>€ 12.00</strong><br>
+                        <small>/mese</small><br>
+                        <br>
+                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
+                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
+                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
+
+                        <button>Prova gratis per 30 giorni</button><br>
+                        <span>oppure <a href="#">acquista ora</a></span><br>
+                        <hr>
+                        <h4>Punti salienti del giorno</h4>
+                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
+                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    </div>
+                </div>
+                <div class="flex direction-column-between width20">
+                    <div>
+                        <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
+                    </div>
+                    <div>
+                        <h3>Professional</h3>
+                        <strong>€ 12.00</strong><br>
+                        <small>/mese</small><br>
+                        <br>
+                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
+                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
+                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
+
+                        <button>Prova gratis per 30 giorni</button><br>
+                        <span>oppure <a href="#">acquista ora</a></span><br>
+                        <hr>
+                        <h4>Punti salienti del giorno</h4>
+                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
+                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    </div>
+                </div>
+                <div class="flex direction-column-between width20">
+                    <div>
+                        <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
+                    </div>
+                    <div>
+                        <h3>Professional</h3>
+                        <strong>€ 12.00</strong><br>
+                        <small>/mese</small><br>
+                        <br>
+                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
+                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
+                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
+
+                        <button>Prova gratis per 30 giorni</button><br>
+                        <span>oppure <a href="#">acquista ora</a></span><br>
+                        <hr>
+                        <h4>Punti salienti del giorno</h4>
+                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
+                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- TEAM -->
