fix(main): jumbo wrong class name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="boxed">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex red padding-1 margin-top-2">
-                    <div class="flex direction-column width30">
+                    <div class="flex direction-column-between width30">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
                         <button>Inizia la tua prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
