feat(main): team

--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@
         </div>
 
         <!-- TEAM -->
-        <div></div>
+        <div class="boxed">
+            <div class="text-center">
+                <i class="fa-solid fa-building"></i> <span>Team</span>
+            </div>
+            <div class="flex justifify-between container-team orange">
+                <div class="width70">
+                    <h3>Enterprise</h3>
+                    <strong>Contatta l'ufficio vendite per i prezzi</strong><br>
+                    <span>Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</span><br>
+                </div>
+                <div class="width30">
+                <button>Contatta l'ufficio vendite</button>
+                </div>
+            </div>
+        </div>
 
         <!-- PARTNER -->
         <div></div>
