feat(main): partner, business features

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="flex justify-between align-middle padding-1 orange">
+        <nav class="flex justify-between align-middle padding-1">
             <div>
                 <img src="./img/logo-small.png" alt="logo" class="align-middle">
                 <a href="#">Perché Dropbox</a>
@@ -35,7 +35,7 @@
         <div class="container-jumbo">
             <div class="boxed">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="flex red padding-1 margin-top-2">
+                <div class="flex padding-1 margin-top-2">
                     <div class="flex direction-column-between width30">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
                         <button>Inizia la tua prova gratuita</button>
@@ -50,15 +50,15 @@
         </div>
 
         <!-- PLANS -->
-        <div class="boxed orange">
+        <div class="boxed">
             <h2>Trova il piano business che fa per te</h2>
             <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
             <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
         </div>
 
-        <div class="boxed red ">
+        <div class="boxed">
             <div class="flex container-plans">
-                <div class="flex direction-column-between width20">
+                <div class="flex direction-column-between width20 border">
                     <div>
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
@@ -79,7 +79,7 @@
                         <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
                     </div>
                 </div>
-                <div class="flex direction-column-between width20">
+                <div class="flex direction-column-between width20 border">
                     <div>
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
@@ -100,7 +100,7 @@
                         <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
                     </div>
                 </div>
-                <div class="flex direction-column-between width20">
+                <div class="flex direction-column-between width20 border">
                     <div>
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
@@ -126,10 +126,10 @@
 
         <!-- TEAM -->
         <div class="boxed">
-            <div class="text-center">
+            <div class="text-center align-middle border align-middle" id="team">
                 <i class="fa-solid fa-building"></i> <span>Team</span>
             </div>
-            <div class="flex justifify-between container-team orange">
+            <div class="flex justifify-between container-team border">
                 <div class="width70">
                     <h3>Enterprise</h3>
                     <strong>Contatta l'ufficio vendite per i prezzi</strong><br>
@@ -142,10 +142,54 @@
         </div>
 
         <!-- PARTNER -->
-        <div></div>
+        <div class="boxed red">
+            <div class="flex justifify-between container-partner">
+                <img src="./img/partner.png" alt="partner">
+                <div>
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ex recusandae optio, officiis eaque quod voluptas quaerat excepturi iusto, natus quasi exercitationem atque! Suscipit non numquam odio ea corrupti dolores?</p>
+                    <button>Trova un partner</button>
+                </div>
+            </div>
+        </div>
 
         <!-- BUSINESS FEATURE -->
-        <div></div>
+        <div class="boxed orange container-feature">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+            <div class="flex justify-between wrap gap">
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+                <div class="feature">
+                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                </div>
+            </div>
+
+        </div>
 
         <!-- EXTRA INFO -->
         <div></div>
