feat(main): extra info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
 
                         <button>Prova gratis per 30 giorni</button><br>
-                        <span>oppure <a href="#">acquista ora</a></span><br>
+                        <span>oppure</span> <a href="#">acquista ora</a><br>
                         <hr>
                         <h4>Punti salienti del giorno</h4>
                         <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
@@ -192,7 +192,15 @@
         </div>
 
         <!-- EXTRA INFO -->
-        <div></div>
+        <div class="boxed">
+            <div class="margin-top-2">
+                <h2>Più di 500.000 team utilizzano<br>
+                    Dropbox Business
+                </h2>
+
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </div>
+        </div>
 
         <!-- SQUARES -->
         <div></div>
