feat(main): squares

--- a/index.html
+++ b/index.html
@@ -203,7 +203,25 @@
         </div>
 
         <!-- SQUARES -->
-        <div></div>
+        <div class="container-squares">
+            <div class="flex wrap">
+                <div class="flex wrap container-squares-smaller">
+                    <div class="square red"></div>
+                    <div class="square blue"></div>
+                    <div class="square orange"></div>
+                    <div class="square bg-black"></div>
+                </div>
+                <div>
+                    <div class="big-square"></div>
+                </div>
+                <div class="flex wrap container-squares-smaller">
+                    <div class="square red"></div>
+                    <div class="square blue"></div>
+                    <div class="square orange"></div>
+                    <div class="square bg-black"></div>
+                </div>
+            </div>
+        </div>
 
         <!-- PROVA GRATUITA -->
         <div></div>
