feat(main): free trial, faq

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <span>Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</span><br>
                 </div>
                 <div class="width30">
-                <button>Contatta l'ufficio vendite</button>
+                    <button>Contatta l'ufficio vendite</button>
                 </div>
             </div>
         </div>
@@ -205,29 +205,62 @@
         <!-- SQUARES -->
         <div class="container-squares">
             <div class="flex wrap">
-                <div class="flex wrap container-squares-smaller">
-                    <div class="square red"></div>
-                    <div class="square blue"></div>
-                    <div class="square orange"></div>
-                    <div class="square bg-black"></div>
+                <div class="flex wrap square-column red">
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
                 </div>
-                <div>
-                    <div class="big-square"></div>
+                <div class="flex wrap square-column orange">
+
                 </div>
-                <div class="flex wrap container-squares-smaller">
-                    <div class="square red"></div>
-                    <div class="square blue"></div>
-                    <div class="square orange"></div>
-                    <div class="square bg-black"></div>
+                <div class="flex wrap square-column blue">
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
+                    <div class="container-squares-smaller"></div>
                 </div>
             </div>
         </div>
 
         <!-- PROVA GRATUITA -->
-        <div></div>
+        <div class="boxed">
+            <div class="flex justifify-between container-team">
+                <div class="width70">
+                    <h3>Enterprise</h3>
+                    <strong>Contatta l'ufficio vendite per i prezzi</strong><br>
+                    <span>Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</span><br>
+                </div>
+                <div class="width30">
+                    <button>Contatta l'ufficio vendite</button>
+                </div>
+            </div>
+        </div>
 
         <!-- FAQ -->
-        <div></div>
+        <div class="boxed margin-top-2">
+            <h2>Domande frequenti</h2>
+            
+            <hr class="margin-top-2">
+            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+            </div>
+            <hr class="margin-top-2">
+            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+            </div>
+            <hr class="margin-top-2">
+            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+            </div>
+            <hr class="margin-top-2">
+        </div>
     </main>
 
     <footer></footer>
