feat(footer): list, language

--- a/index.html
+++ b/index.html
@@ -263,6 +263,61 @@
         </div>
     </main>
 
-    <footer></footer>
+    <footer class="bg-black margin-top-2">
+        <div class="flex justify-between wrap boxed-footer">
+            <div>
+                <ul>
+                    <li><h3>Dropbox</h3></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h3>Dropbox</h3></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h3>Dropbox</h3></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h3>Dropbox</h3></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h3>Dropbox</h3></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h5>Applicazione desktop</h5></li>
+                </ul>
+            </div>
+        </div>
+        <div class="boxed-footer">
+            <div class="boxed-language">
+                <hr>
+                <br>
+                <i class="fa-solid fa-earth-americas lightgray"></i> <span class="lightgray">Italian
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
