--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <main>
         <!-- JUMBO -->
         <div class="container-jumbo">
-            <div class="boxed">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <div class="margin-top-3 boxed-jumbo">
+                <h1>Tutto ciò che ti serve per il<br> lavoro, in un unico posto</h1>
                 <div class="flex padding-1 margin-top-2">
                     <div class="flex direction-column-between width30">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
+                        <p class="margin-top-1.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
                         <button>Inizia la tua prova gratuita</button>
-                        <p>Annulla in qualsiasi momento</p>
-                        <a href="#"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
+                        <p class="margin-bottom-2">Annulla in qualsiasi momento</p>
+                        <a href="#plans"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
                     </div>
                     <div class="width70">
                         <img src="./img/jumbo.png" alt="jumbo" class="jumbo">
@@ -50,8 +50,8 @@
         </div>
 
         <!-- PLANS -->
-        <div class="boxed">
-            <h2>Trova il piano business che fa per te</h2>
+        <div class="boxed" id="plans">
+            <h2 class="margin-top-3">Trova il piano business che fa per te</h2>
             <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
             <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
         </div>
