--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Tutto ciò che ti serve per il<br> lavoro, in un unico posto</h1>
                 <div class="flex padding-1 margin-top-2">
                     <div class="flex direction-column-between width30">
-                        <p class="margin-top-1.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae distinctio deleniti, tenetur ad soluta voluptatum. Cumque et repellendus numquam rerum a mollitia fugiat autem consequuntur temporibus dolore, incidunt accusamus?</p>
+                        <p class="margin-top-1.5">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la tua prova gratuita</button>
                         <p class="margin-bottom-2">Annulla in qualsiasi momento</p>
                         <a href="#plans"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
@@ -57,68 +57,84 @@
         </div>
 
         <div class="boxed">
-            <div class="flex container-plans">
-                <div class="flex direction-column-between width20 border">
-                    <div>
+            <div class="flex container-plans wrap">
+                <div class="width30 border height-colomn-plans">
+                    <div class="text-center border-only-bottom padding-05">
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
-                    <div>
-                        <h3>Professional</h3>
-                        <strong>€ 12.00</strong><br>
-                        <small>/mese</small><br>
-                        <br>
-                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
-                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
-                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
-
-                        <button>Prova gratis per 30 giorni</button><br>
-                        <span>oppure</span> <a href="#">acquista ora</a><br>
-                        <hr>
-                        <h4>Punti salienti del giorno</h4>
-                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
-                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    <div class="padding-plans black">
+                        <ul>
+                            <li><h3>Professional</h3></li>
+                            <li><strong>€ 12.00</strong></li>
+                            <li><small>/mese</small></li>
+                            <br>
+                            <li><i class="fa-solid fa-user-large"></i> <span>1 utente</span></li>
+                            <li><i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span></li>
+                            <li><i class="fa-solid fa-share-nodes"></i> <span> Funzioni di produttività premium e condivisione file semplice e sicura</span></li>
+                            <br>
+                            <li><button class="button-plans">Prova gratis per 30 giorni</button></li>
+                            <br>
+                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
+                            <hr class="boxed-short">
+                            <li><h4>Punti salienti del giorno</h4></li>
+                            <br>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span></li>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="flex direction-column-between width20 border">
-                    <div>
+                <div class="width30 border height-colomn-plans">
+                    <div class="text-center border-only-bottom padding-05">
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
-                    <div>
-                        <h3>Professional</h3>
-                        <strong>€ 12.00</strong><br>
-                        <small>/mese</small><br>
-                        <br>
-                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
-                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
-                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
-
-                        <button>Prova gratis per 30 giorni</button><br>
-                        <span>oppure <a href="#">acquista ora</a></span><br>
-                        <hr>
-                        <h4>Punti salienti del giorno</h4>
-                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
-                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    <div class="padding-plans black">
+                        <ul>
+                            <li><h3>Advanced</h3></li>
+                            <li><strong>€ 18.00</strong></li>
+                            <li><small>/utente/mese</small></li>
+                            <br>
+                            <li><i class="fa-solid fa-user-large"></i> <span>3 o più utenti</span></li>
+                            <li><i class="fa-solid fa-folder"></i> <span>Tutto lo spazio di cui ha bisogno il team</span></li>
+                            <li><i class="fa-solid fa-share-nodes"></i> <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span></li>
+                            <br>
+                            <li><button class="button-plans">Prova gratis per 30 giorni</button></li>
+                            <br>
+                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
+                            <hr class="boxed-short">
+                            <li><h4>Punti salienti del giorno</h4></li>
+                            <br>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Nessun limite di spazio per i file</span></li>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Risparmio del 50% sulle iscrizioni singole</span></li>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Possibilità di inserire nuovi membri del team</span></li>
+                            <li><i class="fa-solid fa-check azure"></i> <span>Gestione dei permessi in base ai ruoli</span></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="flex direction-column-between width20 border">
-                    <div>
+                <div class="width30 border height-colomn-plans">
+                    <div class="text-center border-only-bottom padding-05">
                         <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
                     </div>
-                    <div>
-                        <h3>Professional</h3>
-                        <strong>€ 12.00</strong><br>
-                        <small>/mese</small><br>
-                        <br>
-                        <i class="fa-solid fa-user-large"></i> <span>1 utente</span><br>
-                        <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span><br>
-                        <i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span><br>
-
-                        <button>Prova gratis per 30 giorni</button><br>
-                        <span>oppure <a href="#">acquista ora</a></span><br>
-                        <hr>
-                        <h4>Punti salienti del giorno</h4>
-                        <i class="fa-solid fa-check"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span><br>
-                        <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
+                    <div class="padding-plans black">
+                        <ul>
+                            <li><h3>Enterprise</h3></li>
+                            <li><strong>Contattaci</strong></li>
+                            <li><small>-</small></li>
+                            <br>
+                            <li><i class="fa-solid fa-user-large"></i> <span>10 o più utenti</span></li>
+                            <li><i class="fa-solid fa-folder"></i> <span>Soluzioni personalizzabili per la tua azienda</span></li>
+                            <li><i class="fa-solid fa-share-nodes"></i> <span>Assitenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span></li>
+                            <br>
+                            <li><button class="button-plans">Contattaci</button></li>
+                            <br>
+                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
+                            <hr class="boxed-short">
+                            <li><h4>Punti salienti del giorno</h4></li>
+                            <br>
+                            <li><i class="fa-solid fa-check"></i> <span>Cartelle offline su dispostivi mobili</span></li>
+                            <li><i class="fa-solid fa-check"></i> <span>Servizio assistenza 24/h</span></li>
+                            <li><i class="fa-solid fa-check"></i> <span>Possibilità di personalizzazione totale</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -264,7 +280,7 @@
     </main>
 
     <footer class="bg-black margin-top-2">
-        <div class="flex justify-between wrap boxed-footer">
+        <div class="flex justify-between wrap boxed-footer white">
             <div>
                 <ul>
                     <li><h3>Dropbox</h3></li>
@@ -312,7 +328,7 @@
             </div>
         </div>
         <div class="boxed-footer">
-            <div class="boxed-language">
+            <div class="boxed-short">
                 <hr>
                 <br>
                 <i class="fa-solid fa-earth-americas lightgray"></i> <span class="lightgray">Italian
