feat(main): team, partner, features, extra info

--- a/index.html
+++ b/index.html
@@ -158,62 +158,60 @@
         </div>
 
         <!-- PARTNER -->
-        <div class="boxed red">
-            <div class="flex justifify-between container-partner">
+        <div class="boxed">
+            <div class="flex justifify-between container-partner margin-top-10 margin-bottom-10">
                 <img src="./img/partner.png" alt="partner">
-                <div>
-                    <h3>Entra in contatto con un partner Dropbox</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ex recusandae optio, officiis eaque quod voluptas quaerat excepturi iusto, natus quasi exercitationem atque! Suscipit non numquam odio ea corrupti dolores?</p>
-                    <button>Trova un partner</button>
+                <div class="margin-left-3">
+                    <h3 class="margin-top-2">Entra in contatto con un partner Dropbox</h3>
+                    <p class="margin-top-2">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <button id="button-partner">Trova un partner</button>
                 </div>
             </div>
         </div>
 
         <!-- BUSINESS FEATURE -->
-        <div class="boxed orange container-feature">
-            <h2>Esegui più operazioni con Dropbox Business</h2>
+        <div class="boxed container-feature">
+            <h2 class="margin-bottom-1">Esegui più operazioni con Dropbox Business</h2>
             <div class="flex justify-between wrap gap">
                 <div class="feature">
                     <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <img src="./img/business-feature-send-files-it.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <img src="./img/business-feature-coordinate-it.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <img src="./img/business-feature-integrations-it.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <img src="./img/business-feature-multi-device.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
+                    <img src="./img/business-feature-security.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque assumenda laboriosam dolore tempore provident numquam commodi beatae nam ipsa veritatis fuga sit, ullam harum, vero consequuntur eveniet minima porro dolorem.</p>
+                    <p class="margin-top-2">Porta a termine le attività quotidiane con un solo strumeno. Crea, modifica e condivi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
-
         </div>
 
         <!-- EXTRA INFO -->
         <div class="boxed">
-            <div class="margin-top-2">
-                <h2>Più di 500.000 team utilizzano<br>
+            <div>
+                <h2 class="margin-top-402 margin-bottom-05">Più di 500.000 team utilizzano<br>
                     Dropbox Business
                 </h2>
-
                 <a href="#">Scopri di più sui nostri clienti</a>
             </div>
         </div>
