--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Tutto ciò che ti serve per il<br> lavoro, in un unico posto</h1>
                 <div class="flex padding-1 margin-top-2">
                     <div class="flex direction-column-between width30">
-                        <p class="margin-top-1.5">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la tua prova gratuita</button>
                         <p class="margin-bottom-2">Annulla in qualsiasi momento</p>
                         <a href="#plans"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
@@ -172,7 +172,7 @@
         <!-- BUSINESS FEATURE -->
         <div class="boxed container-feature">
             <h2 class="margin-bottom-1">Esegui più operazioni con Dropbox Business</h2>
-            <div class="flex justify-between wrap gap">
+            <div class="flex justify-between wrap gap margin-top-2">
                 <div class="feature">
                     <img src="./img/business-feature-switching-tools.png" alt="" class="img-feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
