fix(main): team

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
             <div class="text-center align-middle border align-middle" id="team">
                 <i class="fa-solid fa-building"></i> <span>Team</span>
             </div>
-            <div class="flex justifify-between container-team border">
+            <div class="flex justifify-between container-team border gap-team">
                 <div class="width70">
-                    <h3>Enterprise</h3>
-                    <strong>Contatta l'ufficio vendite per i prezzi</strong><br>
-                    <span>Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</span><br>
+                    <h3 class="margin-bottom-05">Enterprise</h3>
+                    <h4 class="margin-bottom-1">Contatta l'ufficio vendite per i prezzi</h4>
+                    <p class="margin-top-3">Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</p>
                 </div>
                 <div class="width30">
-                    <button>Contatta l'ufficio vendite</button>
+                    <button id="button-team">Contatta l'ufficio vendite</button>
                 </div>
             </div>
         </div>
